# qqmusic-rs

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: docs.yaml
examples/: get_lyric_with_songid.rs  set_cookies.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  (+4 more)
qqmusic_rs/: all.html  index.html  sidebar-items.js  struct.QQMusicApi.html  type.GETResult.html  type.POSTResult.html
qqmusic_rs/config/: struct.QQMusicApi.html
qqmusic_rs/lyric/: index.html  sidebar-items.js  trait.QueryLyric.html
qqmusic_rs/search/: index.html  sidebar-items.js  struct.Track.html  trait.Search.html  trait.SearchType.html
qqmusic_rs/song/: index.html  sidebar-items.js  trait.SongDetail.html
qqmusic_rs/types/: enum.SongId.html  index.html  sidebar-items.js
qqmusic_rs/user/: index.html  sidebar-items.js  trait.GetCookie.html  trait.SetCookie.html  trait.ViewCookie.html
search.desc/qqmusic_rs/: qqmusic_rs-desc-0-.js
src/: lib.rs  lyric.rs  main.rs  search.rs  sign.rs  song.rs  types.rs  user.rs
src/config/: mod.rs
src/qqmusic_rs/: lib.rs.html  lyric.rs.html  search.rs.html  song.rs.html  types.rs.html  user.rs.html
src/types/: lyric.rs  search.rs  song.rs  user.rs
(+84 files in other folders)
