[package]
name = "qqmusic-rs"
version = "0.1.0"
edition = "2021"
description = "Simple wrapper for QQMusicApi"
authors = ["mokurin000"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
url = "2.4.0"

[dev-dependencies]
reqwest = "0.12.4"
anyhow = "1.0.72"
tokio = { version = "1.30.0", features = ["full"] }
