[package]
name = "qqmusic-rs"
version = "0.2.1"
edition = "2021"
description = "Simple wrapper for QQMusicApi"
authors = ["mokurin000"]
license = "MIT"
repository = "https://github.com/waylyrics/QQMusicApi/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
url = "2.5.2"

[dev-dependencies]
reqwest = "0.12.4"
anyhow = "1.0.72"
tokio = { version = "1.30.0", features = ["full"] }
